compiler/tests/fa/errors/pure_ref_param.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع افزا(x &: صحیح) : صحیح:
    بازگشت x + 1
پایان

تابع اصلی:
    چاپ(1)
پایان
